# openai-api-usecases

./: .gitignore  README.md
cli/: .env.example  README.md  pyproject.toml
cli/cli/: main.py
cli/core/: logging.py
cli/tests/: test_chat.py  test_embeddings.py  test_vision.py
cli/usecases/: chat.py  embeddings.py  vision.py
fastapi/: Dockerfile  README.md  pyproject.toml
fastapi/app/: main.py
fastapi/app/core/: config.py  logging.py
fastapi/app/routers/: chat.py  embeddings.py  vision.py
fastapi/app/schemas/: chat.py  embeddings.py  vision.py
fastapi/tests/: test_api.py
jupyter/: README.md  pyproject.toml
jupyter/notebooks/: 01_chat_completions.ipynb  02_vision.ipynb  03_embeddings.ipynb
